--- a/posts/2019-05-23-datadog.md
+++ b/posts/2019-05-23-datadog.md
@@ -18,11 +18,11 @@ We are big fans of Datadog at Convox and we loved their [blog post](https://www.
 
 * Route all your logs into Datadog
 
-This post assumes you already have a running application on Convox. If you don’t, check out our [getting started guide](https://docs.convox.com/introduction/getting-started). It only takes a few minutes to deploy your first app.
+This post assumes you already have a running application on Convox. If you don’t, check out our [getting started guide](https://docs.convox.com/introduction/getting-started). You will have your first app up and running in no time.
 
 ## Running a Datadog Agent on Every Host
 
-To achieve maximum visibility we recommend running one copy of the Datadog agent on each EC2 instance powering your ECS cluster. Fortunately Convox makes this easy using the Agent attribute in your Convox.yml. To do this simply create a new Convox app with the following Convox.yml:
+To achieve maximum visibility we recommend running one copy of the Datadog agent on each EC2 instance powering your ECS cluster. Fortunately Convox makes this easy using the Agent attribute in your Convox.yml. To do this simply create a new Convox app with the following convox.yml:
 ```
 services:
   datadog:
@@ -53,7 +53,7 @@ $ convox env set DD_API_KEY=[YOUR API KEY]
 ```
 
 
-Once you add this to your Convox.yml and deploy your application into the Convox Rack that contains the other apps you want to monitor. You should start seeing your containers appear in Datadog within a few minutes.
+Once you add this to your convox.yml and deploy your application into the Convox Rack that contains the other apps you want to monitor. You should start seeing your containers appear in Datadog within a few minutes.
 
 ### A few notes: 
 This configuration assumes you want to enable APM and live process monitoring. You can disable these if you choose not to use them. We also added:
@@ -64,9 +64,9 @@ To cut down on the noise from the Datadog and ECS agents. If you want to see the
 
 ## Adding Datadog APM to Your App
 
-In order to really gain insight into how your apps are performing, and particularly where in your code there may be performance issues, it’s recommended to install an Application Performance Monitoring (APM) agent in your application. Installing the Datadog APM for an application deployed with Convox is a simple.
+In order to really gain insight into how your apps are performing, and particularly where in your code there may be performance issues, it’s recommended to install an Application Performance Monitoring (APM) tracing library in your application. Installing the Datadog APM for an application deployed with Convox is a simple.
 
-The first thing you need to do is install a [Datadog tracing library](https://docs.datadoghq.com/tracing/setup/) for whatever language/framework your application is based on. You can get very in depth with Datadog tracing but to get basic visibility typically is only a few lines of code. Using a node.js app as an example setting up the Datadog tracer would look like this:
+All you need to do is install a [Datadog tracing library](https://docs.datadoghq.com/tracing/setup/) for whatever language/framework your application is based on. You can get very in depth with Datadog tracing but to get basic visibility typically is only a few lines of code. Using a node.js app as an example setting up the Datadog tracer would look like this:
 
 ```
 const tracer = require('dd-trace')
@@ -87,7 +87,7 @@ One thing to note is that we are using the ‘get-docker-host’ module to retri
 $ ip route list match 0/0 | awk '{print $3}'
 ```
 
-Or whatever the equivalent is for your language/framework like we have done with node above.
+Or whatever the equivalent is for your language/framework like we have done with node above. Once you have your application updated you can redeploy it into the Rack where you deployed the Datadog agent application and you will begin to see data in the Datadog APM console.
 
 ## Routing Your Convox Logs Into Datadog 
 
