updates from review

--- a/posts/2019-05-23-datadog.md
+++ b/posts/2019-05-23-datadog.md
@@ -1,14 +1,11 @@
 ---
-title: Monitoring your ECS containers with Datadog
+title: Monitoring Your ECS Containers with Datadog
 author: Cameron Gray
 twitter: camerondgray
 tags: [Datadog, Convox, APM, AWS, ECS, Container monitoring]
-description: Monitoring your ECS containers with Datadog
+description: Monitoring Your ECS Containers with Datadog
 ---
 
-![Datadog Dashboard](/images/blog/datadog_dashboard.png)
-
-<!--more-->
 
 We are big fans of Datadog at Convox and we loved their [blog post](https://www.datadoghq.com/blog/monitoring-ecs-with-datadog/) on monitoring ECS. Reading this post also made me think, “Convox could make this even easier!” So that’s what we did. If you want to deploy a fully instrumented app on ECS follow these instructions and in just a few minutes you will:
 
@@ -18,11 +15,13 @@ We are big fans of Datadog at Convox and we loved their [blog post](https://www.
 
 * Route all your logs into Datadog
 
+![Datadog Dashboard](/images/blog/datadog_dashboard.png)
+
 This post assumes you already have a running application on Convox. If you don’t, check out our [getting started guide](https://docs.convox.com/introduction/getting-started). You will have your first app up and running in no time.
 
 ## Running a Datadog Agent on Every Host
 
-To achieve maximum visibility we recommend running one copy of the Datadog agent on each EC2 instance powering your ECS cluster. Fortunately Convox makes this easy using the Agent attribute in your Convox.yml. To do this simply create a new Convox app with the following convox.yml:
+To achieve maximum visibility we recommend running one copy of the Datadog agent on each EC2 instance powering your ECS cluster. Fortunately Convox makes this easy using the Agent attribute in your `convox.yml`. To do this simply create a new Convox app with the following `convox.yml`:
 ```
 services:
   datadog:
@@ -53,7 +52,7 @@ $ convox env set DD_API_KEY=[YOUR API KEY]
 ```
 
 
-Once you add this to your convox.yml and deploy your application into the Convox Rack that contains the other apps you want to monitor. You should start seeing your containers appear in Datadog within a few minutes.
+Once you add this to your `convox.yml` and deploy your application into the Convox Rack that contains the other apps you want to monitor. You should start seeing your containers appear in Datadog within a few minutes.
 
 ### A few notes: 
 This configuration assumes you want to enable APM and live process monitoring. You can disable these if you choose not to use them. We also added:
@@ -81,7 +80,7 @@ var getDockerHost = require('get-docker-host');
     });
 
 ```
-One thing to note is that we are using the ‘get-docker-host’ module to retrieve the host address. In order to send our APM data to the host we need to use this address. Currently for ECS the host gateway address is defaulted to `172.17.0.1` so you could hardcode for now but there is no guarantee that AWS wont change this in the future. The safest thing to do is grab the address with:
+One thing to note is that we are using the `get-docker-host` module to retrieve the host address. In order to send our APM data to the host we need to use this address. Currently for ECS the host gateway address is defaulted to `172.17.0.1` so you could hardcode for now but there is no guarantee that AWS wont change this in the future. The safest thing to do is grab the address with:
 
 ```shell
 $ ip route list match 0/0 | awk '{print $3}'
@@ -93,10 +92,10 @@ Or whatever the equivalent is for your language/framework like we have done with
 
 ![Lambda Editor](/images/blog/lambda_management_console.png)
 
-The final piece is to route all the logs from your application as well as your infrastructure into Datadog. Convox is already configured to route all logs into Cloudwatch and Datadog has a Cloudwatch lambda function so the configuration is very easy. 
+The final piece is to route all the logs from your application as well as your infrastructure into Datadog. Convox is already configured to route all logs into Cloudwatch and Datadog has a Cloudwatch Lambda function so the configuration is very easy. 
 
 The first thing you want to do is to install the [Datadog Cloudwatch Lambda function](https://docs.datadoghq.com/integrations/amazon_web_services/?tab=allpermissions#set-up-the-datadog-lambda-function) which you can get from either the AWS [serverless repository](https://serverlessrepo.aws.amazon.com/applications/arn:aws:serverlessrepo:us-east-1:464622532012:applications~Datadog-Log-Forwarder) or from Datadog’s [github repository](https://github.com/DataDog/datadog-serverless-functions/blob/master/aws/logs_monitoring/lambda_function.py). 
 
-Once you have the lambda function installed you need to grab your logs from Convox by selecting Cloudwatch from the `Add Triggers` menu on the left-hand side of the lambda designer window. From the log group drop down you first want to find the log group that corresponds to your Convox Rack which will be named something like `RackName-Log-Group-XXXXX`. Next you will want to add the log group for your app(s) The application log group names will look like `RackName-AppName-Log-Group-XXXXX`. You can verify you have the correct log groups by going into Cloudformation and checking the outputs for your Rack and App stacks. You will want to repeat this step for each application in your Rack that you wish to capture the logs for.  Once you have added all the log groups click save and you are good to go. You can head over to the logs live tail view in your Datadog console and see your logs streaming in. If you want to rename services or otherwise customize your logs you can do so with a log pipeline by clicking on configure in the logs menu.
+Once you have the Lambda function installed you need to grab your logs from Convox by selecting Cloudwatch from the `Add Triggers` menu on the left-hand side of the Lambda designer window. From the log group drop down you first want to find the log group that corresponds to your Convox Rack which will be named something like `RackName-Log-Group-XXXXX`. Next you will want to add the log group for your app(s) The application log group names will look like `RackName-AppName-Log-Group-XXXXX`. You can verify you have the correct log groups by going into Cloudformation and checking the outputs for your Rack and App stacks. You will want to repeat this step for each application in your Rack that you wish to capture the logs for.  Once you have added all the log groups click save and you are good to go. You can head over to the logs live tail view in your Datadog console and see your logs streaming in. If you want to rename services or otherwise customize your logs you can do so with a log pipeline by clicking on configure in the logs menu.
 
-With this configuration you should have total visibility into the performance of your hosts and applications thanks to Convox and Datadog! If you haven't deployed an app with Convox before you can [signup for free](https://console.convox.com/signup) and have your first app deployed in a few minutes. 
+With this configuration you should have total visibility into the performance of your hosts and applications thanks to Convox and Datadog! If you haven't deployed an app with Convox before we make ECS super easy. You can [signup for free](https://console.convox.com/signup) and have your first app deployed in a few minutes. 
