fix title casing

--- a/posts/2019-09-09-AWS_ELB.md
+++ b/posts/2019-09-09-AWS_ELB.md
@@ -1,5 +1,5 @@
 ---
-title: The evolving landscape of AWS Load Balancers
+title: The Evolving Landscape of AWS Load Balancers
 author: Cameron Gray
 twitter: camerondgray
 tags: [AWS, Convox, APM, ELB, ALB, NLB, Elastic Load Balancer, Application Load Balancer, Network Load Balancer]
