typo. Nice catch Ed!

--- a/posts/2019-09-09-AWS_ELB.md
+++ b/posts/2019-09-09-AWS_ELB.md
@@ -31,7 +31,7 @@ The application layer is where you have full view of a particular request and it
 When AWS first started offering a load balancing service the only option was a hybrid Layer 4 and Layer 7 load balancer which was initially called Elastic Load Balancer (ELB). To make things a bit confusing AWS now refers to all their [load balancing options](https://aws.amazon.com/elasticloadbalancing/) as ELB and this first iteration (which is still currently available) is now referred to as the Classic Load Balancer, while still under the overall umbrella of ELB. You will often hear people refer to the Classic Load Balancer as ELB but it is technically a flavor of ELB.  The Classic Load Balancer has some great features but its proxy based approach left it with some significant short-comings that make it neither a great Layer 4 load balancer nor a great Layer 7 load balancer and ultimately not a great choice for modern applications. I suspect that AWS will eventually phase out the Classic Load Balancer and thus I wouldn’t recommend choosing this option for any new deployment you are planning.
 
 ### Application Load Balancer (ALB)
-The second load balancer offering that AWS introduced was the Application Load Balancer. The ALB is a robust Layer 7 load balancer offering native support for HTTP/HTTPS and partial support for HTTP/2. ALB also offers a robust set of routing options (path, host, etc..) as well as some really nice continuous delivery features such as connection draining and highly configurable health-checks. For most web based applications that are just serving HTTP and HTTPS traffic ALB is a great choice. There are a few gotchas with ALB however. One thing to keep in mind is that all the host/path routing decisions are based on a rules table that ALB maintains and currently there is a hard limit of 100 rules. This means if you are hoping to have more than 100 domains or paths that you want to base your routing decisions on your are likely still going to have to run a secondary load balancer or proxy (such as HAProxy or Nginx) in front of your applications.
+The second load balancer offering that AWS introduced was the Application Load Balancer. The ALB is a robust Layer 7 load balancer offering native support for HTTP/HTTPS and partial support for HTTP/2. ALB also offers a robust set of routing options (path, host, etc..) as well as some really nice continuous delivery features such as connection draining and highly configurable health-checks. For most web based applications that are just serving HTTP and HTTPS traffic ALB is a great choice. There are a few gotchas with ALB however. One thing to keep in mind is that all the host/path routing decisions are based on a rules table that ALB maintains and currently there is a hard limit of 100 rules. This means if you are hoping to have more than 100 domains or paths that you want to base your routing decisions on you are likely still going to have to run a secondary load balancer or proxy (such as HAProxy or Nginx) in front of your applications.
 
 ### Network Load Balancer (NLB)
 The most recent offering to come from AWS is the Network Load Balancer. NLB is an extremely robust Layer 4 load balancer. By removing the Layer 7 requirement that is present on the Classic Load Balancer NLB does not have to act like a proxy and it can make decisions based solely on TCP/IP and UDP information. This means that not only is the load balancer completely transparent to your application (no proxy headers etc…) but it’s also extremely fast and capable of handling massive and very spiky traffic while introducing almost no overhead or latency. The major drawback of NLB is it makes no attempt to be a Layer 7 load balancer so you are left completely on your own to handle Layer 7 routing to your application.
