--- a/posts/2019-09-09-AWS_ELB.md
+++ b/posts/2019-09-09-AWS_ELB.md
@@ -34,7 +34,7 @@ When AWS first started offering a load balancing service the only option was a h
 The second load balancer offering that AWS introduced was the Application Load Balancer. The ALB is a robust Layer 7 load balancer offering native support for HTTP/HTTPS and partial support for HTTP/2. ALB also offers a robust set of routing options (path, host, etc..) as well as some really nice continuous delivery features such as connection draining and highly configurable health-checks. For most web based applications that are just serving HTTP and HTTPS traffic ALB is a great choice. There are a few gotchas with ALB however. One thing to keep in mind is that all the host/path routing decisions are based on a rules table that ALB maintains and currently there is a hard limit of 100 rules. This means if you are hoping to have more than 100 domains or paths that you want to base your routing decisions on you are likely still going to have to run a secondary load balancer or proxy (such as HAProxy or Nginx) in front of your applications.
 
 ### Network Load Balancer (NLB)
-The most recent offering to come from AWS is the Network Load Balancer. NLB is an extremely robust Layer 4 load balancer. By removing the Layer 7 requirement that is present on the Classic Load Balancer NLB does not have to act like a proxy and it can make decisions based solely on TCP/IP and UDP information. This means that not only is the load balancer completely transparent to your application (no proxy headers etc…) but it’s also extremely fast and capable of handling massive and very spiky traffic while introducing almost no overhead or latency. The major drawback of NLB is it makes no attempt to be a Layer 7 load balancer so you are left completely on your own to handle Layer 7 routing to your application.
+The most recent offering to come from AWS is the Network Load Balancer. NLB is an extremely robust Layer 4 load balancer. By removing the Layer 7 requirement that is present on the Classic Load Balancer, NLB does not have to act like a proxy and it can make decisions based solely on TCP/IP and UDP information. This means that not only is the load balancer completely transparent to your application (no proxy headers etc…) but it’s also extremely fast and capable of handling massive and very spiky traffic while introducing almost no overhead or latency. The major drawback of NLB is it makes no attempt to be a Layer 7 load balancer so you are left completely on your own to handle Layer 7 routing to your application.
 
 ### Our Experience ###
 At Convox we have lived through the entire history of AWS load balancers. For our first generation ECS based Platform as Service offering we relied on the Classic Load Balancer because it was the only option available. As we were working on our current iteration of the ECS platform ALB had become available and allowed us to introduce a great new set of features for our customers such as [automatic TLS](https://docs.convox.com/deployment/ssl), [fully managed custom domains](https://docs.convox.com/deployment/custom-domains), [review applications](https://docs.convox.com/console/workflows#review-workflows), [seamless rolling updates](https://docs.convox.com/deployment/rolling-updates), and a very robust set of [health checks](https://docs.convox.com/application/health-checks). We have been very happy with the performance of ALB although some of our larger customers with huge microservice deployments have struggled with the rules limits, and we have had to rely on workarounds. We have also found the HTTP/2 implementation on ALB to be less than ideal because, while the load balancer can handle HTTP/2 traffic, it is downgraded to HTTP/1.1 before reaching the underlying services. That said, for the vast majority of our customers we still find ALB to be a great fit.
