fix old blog links and fix new blog post (#782)

--- a/posts/2019-05-28-datadog.md
+++ b/posts/2019-05-28-datadog.md
@@ -17,7 +17,7 @@ We are big fans of Datadog at Convox and we loved their [blog post](https://www.
 
 ![Datadog Dashboard](/images/blog/datadog_dashboard.png)
 
-This post assumes you already have a running application on Convox. If you don’t, check out our [getting started guide](https://docs.convox.com/introduction/getting-started). You will have your first app up and running in no time.
+This post assumes you already have a running application on Convox. If you don’t, check out our [getting started guide](https://docsv2.convox.com/introduction/getting-started). You will have your first app up and running in no time.
 
 ## Running a Datadog Agent on Every Host
 
