--- a/posts/2019-09-09-AWS_ELB.md
+++ b/posts/2019-09-09-AWS_ELB.md
@@ -37,7 +37,7 @@ The second load balancer offering that AWS introduced was the Application Load B
 The most recent offering to come from AWS is the Network Load Balancer. NLB is an extremely robust Layer 4 load balancer. By removing the Layer 7 requirement that is present on the Classic Load Balancer, NLB does not have to act like a proxy and it can make decisions based solely on TCP/IP and UDP information. This means that not only is the load balancer completely transparent to your application (no proxy headers etc…) but it’s also extremely fast and capable of handling massive and very spiky traffic while introducing almost no overhead or latency. The major drawback of NLB is it makes no attempt to be a Layer 7 load balancer so you are left completely on your own to handle Layer 7 routing to your application.
 
 ### Our Experience ###
-At Convox we have lived through the entire history of AWS load balancers. For our first generation ECS based Platform as Service offering we relied on the Classic Load Balancer because it was the only option available. As we were working on our current iteration of the ECS platform ALB had become available and allowed us to introduce a great new set of features for our customers such as [automatic TLS](https://docs.convox.com/deployment/ssl), [fully managed custom domains](https://docs.convox.com/deployment/custom-domains), [review applications](https://docs.convox.com/console/workflows#review-workflows), [seamless rolling updates](https://docs.convox.com/deployment/rolling-updates), and a very robust set of [health checks](https://docs.convox.com/application/health-checks). We have been very happy with the performance of ALB although some of our larger customers with huge microservice deployments have struggled with the rules limits, and we have had to rely on workarounds. We have also found the HTTP/2 implementation on ALB to be less than ideal because, while the load balancer can handle HTTP/2 traffic, it is downgraded to HTTP/1.1 before reaching the underlying services. That said, for the vast majority of our customers we still find ALB to be a great fit.
+At Convox we have lived through the entire history of AWS load balancers. For our first generation ECS based Platform as Service offering we relied on the Classic Load Balancer because it was the only option available. As we were working on our current iteration of the ECS platform ALB had become available and allowed us to introduce a great new set of features for our customers such as [automatic TLS](https://docsv2.convox.com/deployment/ssl), [fully managed custom domains](https://docsv2.convox.com/deployment/custom-domains), [review applications](https://docsv2.convox.com/console/workflows#review-workflows), [seamless rolling updates](https://docsv2.convox.com/deployment/rolling-updates), and a very robust set of [health checks](https://docsv2.convox.com/application/health-checks). We have been very happy with the performance of ALB although some of our larger customers with huge microservice deployments have struggled with the rules limits, and we have had to rely on workarounds. We have also found the HTTP/2 implementation on ALB to be less than ideal because, while the load balancer can handle HTTP/2 traffic, it is downgraded to HTTP/1.1 before reaching the underlying services. That said, for the vast majority of our customers we still find ALB to be a great fit.
 
 When we started working on our Kubernetes based platform we realized that we could have our cake and eat it too. We knew we wanted to use NLB because it offered the most flexibility and performance. Because we were now deploying to a Kubernetes cluster we had the opportunity to define our own Layer 7 load balancer within the cluster. With this configuration we are able to offer a zero configuration Platform as a Service experience and a highly configurable and customizable set of load balancing options on the same platform while achieving great scale and performance. 
 
